--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "body-parser": "^1.18.3",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
+    "material-ui-search-bar": "^1.0.0-beta.13",
     "mongoose": "^5.3.13",
     "nodemon": "^1.18.6",
     "react": "^16.6.3",
@@ -19,7 +20,7 @@
   },
   "scripts": {
     "webpack": "webpack --mode development",
-    "start": "npm run webpack && nodemon -L --exec babel-node bin/www --verbose"
+    "start": "rm -rf client/assets/images/tmp/ && npm run webpack && nodemon -L --exec babel-node bin/www --verbose"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -31,6 +32,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "file-loader": "^2.0.0",
     "webpack-cli": "^3.1.2"
   }
 }
