--- a/package.json
+++ b/package.json
@@ -6,13 +6,16 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "bootstrap": "^4.2.1",
+    "bcrypt": "^3.0.3",
+    "body-parser": "^1.18.3",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
+    "jsonwebtoken": "^8.4.0",
     "mongodb": "^3.0.5",
+    "mongoose": "^5.4.5",
     "monk": "~6.0.5",
     "morgan": "~1.9.0"
   }
