--- a/package.json
+++ b/package.json
@@ -15,10 +15,11 @@
     "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
+    "ejs": "^2.6.1",
     "express": "~4.16.0",
+    "express-ejs-layouts": "^2.5.0",
     "express-session": "^1.15.6",
     "http-errors": "~1.6.2",
-    "jade": "~1.11.0",
     "mongodb": "^3.0.5",
     "mongoose": "^5.4.5",
     "morgan": "~1.9.0",
