--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "mongoose": "^5.4.5",
     "morgan": "~1.9.0",
     "passport": "^0.4.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "faker": "~4.1.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.9"
