implement retrieving data for profile page

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "~4.16.0",
     "express-ejs-layouts": "^2.5.0",
     "express-session": "^1.15.6",
+    "faker": "^4.1.0",
     "http-errors": "~1.6.2",
     "mongodb": "^3.0.5",
     "mongoose": "^5.4.5",
