--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "ejs": "^2.6.1",
     "express": "~4.16.0",
     "express-ejs-layouts": "^2.5.0",
+    "express-fileupload": "^1.1.1-alpha.3",
     "express-session": "^1.15.6",
     "faker": "^4.1.0",
     "http-errors": "~1.6.2",
