--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
+    "dotenv": "^6.2.0",
     "ejs": "^2.6.1",
     "express": "~4.16.0",
     "express-fileupload": "^1.1.1-alpha.3",
