--- a/package.json
+++ b/package.json
@@ -28,8 +28,7 @@
     "multer": "^1.4.1",
     "multer-s3": "^2.9.0",
     "passport": "^0.4.0",
-    "passport-local": "^1.0.0",
-    "express-ws": "~4.0.0"
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.9"
