--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   "keywords": [],
   "author": "Tim Baek",
   "dependencies": {
+    "aws-sdk": "^2.415.0",
     "bcrypt": "^3.0.3",
     "body-parser": "^1.18.3",
     "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
+    "dotenv": "^6.2.0",
     "ejs": "^2.6.1",
     "express": "~4.16.0",
     "express-fileupload": "^1.1.1-alpha.3",
@@ -23,6 +25,8 @@
     "mongodb": "^3.0.5",
     "mongoose": "^5.4.5",
     "morgan": "~1.9.0",
+    "multer": "^1.4.1",
+    "multer-s3": "^2.9.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0"
   },
