--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "multer-s3": "^2.9.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
+    "serve-favicon": "^2.5.0",
     "ws": "^6.2.0"
   },
   "devDependencies": {
